@@ -1,3 +1,6 @@
+Feb 22, 2023
+  tuned up summary logging (reduced spam)
+
 Feb 13, 2023
   updated build.gradle to be gradle 6.x + compatible
 
